--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       left: 0;
       background: #fff;
       z-index: 10;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid rgba(0,0,0,0.16);
     }
     .navbar-inner {
       max-width: 980px;
