修改页面样式

--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-cn">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Swift Craft Launcher - A Minecraft Launcher for macOS</title>
+  <title>Swift Craft Launcher - 专为 macOS 设计的 Minecraft 启动器</title>
   <link rel="stylesheet" href="/main.css" />
   <link rel="shortcut icon"
     href="https://github.com/suhang12332/Swift-Craft-Launcher/raw/main/SwiftCraftLauncher/Assets.xcassets/AppIcon.appiconset/mac512pt2x.png"
@@ -36,13 +35,12 @@
       <h1 class="font-bold text-xl">Swift Craft Launcher</h1>
       <div class="flex gap-8 items-center text-xs h-full">
         <p class="items-center border-b-1 border-b-header-border-active h-full mt-[1px] hidden lg:flex">
-          Overview
+          概述
         </p>
         <a href="https://github.com/suhang12332/Swift-Craft-Launcher/"
-          class="opacity-80 hover:opacity-90 after:content-['􀄯'] after:text-[10px] after:ml-1">More on
-          github</a>
+          class="opacity-80 hover:opacity-90 after:content-['􀄯'] after:text-[10px] after:ml-1">在 Github 上查看更多</a>
         <a href="https://github.com/suhang12332/Swift-Craft-Launcher/releases/latest"
-          class="py-1.25 px-3 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white hidden lg:flex">Download</a>
+          class="py-1.25 px-3 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white hidden lg:flex">下载</a>
       </div>
     </div>
   </header>
@@ -59,11 +57,11 @@
         </div>
         <h1 class="title text-3xl font-bold mb-1 lg:text-7xl lg:mb-4">Swift Craft Launcher</h1>
         <p class="subtitle font-bold text-lg mb-8 lg:text-xl">
-          A modern Minecraft launcher for macOS
+          专为 macOS 设计的现代化 Minecraft 启动器
         </p>
         <a href="https://github.com/suhang12332/Swift-Craft-Launcher/releases/latest"
-          class="download-button py-1.25 px-3.5 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white">Download</a>
-        <p class="opacity-56 text-sm mt-3.5">Requires macOS 14.0 or later</p>
+          class="download-button py-1.25 px-3.5 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white">下载</a>
+        <p class="opacity-56 text-sm mt-3.5">适用于 macOS 14.0 或更高版本</p>
       </div>
     </section>
   </main>
@@ -81,42 +79,41 @@
         <!-- Links -->
         <div class="gap-35 mb-20 hidden lg:flex">
           <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Project</h3>
-            <p class="opacity-56 text-sm"><a href>Overview</a></p>
+            <h3 class="opacity-88">项目</h3>
+            <p class="opacity-56 text-sm"><a href>概述</a></p>
           </div>
           <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Support</h3>
+            <h3 class="opacity-88">帮助</h3>
             <p class="opacity-56 text-sm">
-              <a href="https://imreak.github.io/">User Guide</a>
+              <a href="https://imreak.github.io/">用户指南</a>
             </p>
             <p class="opacity-56 text-sm">
-              <a href="https://github.com/suhang12332/Swift-Craft-Launcher/issues">Report
-                Issues</a>
-            </p>
-          </div>
-          <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Development</h3>
-            <p class="opacity-56 text-sm">
-              <a href="https://github.com/suhang12332/Swift-Craft-Launcher/">Github</a>
+              <a href="https://github.com/suhang12332/Swift-Craft-Launcher/issues">反馈问题</a>
             </p>
           </div>
           <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Community</h3>
-            <p class="opacity-56 text-sm"><a href>BiliBili</a></p>
-            <p class="opacity-56 text-sm"><a href>QQ Group</a></p>
+            <h3 class="opacity-88">开发</h3>
+            <p class="opacity-56 text-sm">
+              <a href="https://github.com/suhang12332/Swift-Craft-Launcher/">在 Github 上帮助我们改进</a>
+            </p>
+          </div>
+          <div class="flex flex-col gap-2.5">
+            <h3 class="opacity-88">社区</h3>
+            <p class="opacity-56 text-sm"><a href>哔哩哔哩</a></p>
+            <p class="opacity-56 text-sm"><a href>QQ 群</a></p>
           </div>
         </div>
         <div class="flex lg:justify-end">
           <div class="flex p-0.25 rounded-full border-1 border-button-blue text-xs text-blue-500 mb-3"
             id="themeSelector">
             <p class="px-2 py-0.75 cursor-pointer rounded-full" data-theme="light">
-              Light
+              浅色
             </p>
             <p class="px-2 py-0.75 cursor-pointer rounded-full" data-theme="dark">
-              Dark
+              深色
             </p>
             <p class="px-2 py-0.75 cursor-pointer rounded-full" data-theme="auto">
-              Auto
+              自动
             </p>
           </div>
         </div>
@@ -124,22 +121,20 @@
       <div class="flex justify-between border-t-1 border-gray-700 py-2 text-xs">
         <div class="opacity-56 flex gap-2 flex-col lg:flex-row lg:gap-8">
           <p>
-            Copyright © 2025 Swift Craft Launcher. All rights reserved.
+            版权所有 © 2025 Swift Craft Launcher。保留所有权利。
           </p>
-          <p class="hidden lg:flex">Swift Craft Launcher is an open-source project under the AGPLv3
-            license.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Minecraft is a trademark of Mojang Studios</span>
+          <p class="hidden lg:flex">Swift Craft Launcher 是一个开源项目，使用 AGPLv3 协议发布。&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Minecraft 是 Mojang Studios 的注册商标。</span>
           </p>
           <span class="flex flex-col gap-2 lg:hidden">
-            <p> Swift Craft Launcher is an open-source project under the AGPLv3
-              license.</p>
+            <p> Swift Craft Launcher 是一个开源项目，使用 AGPLv3 协议发布。</p>
             <hr>
-            <p> Minecraft is a trademark of Mojang Studios</p>
+            <p> Minecraft 是 Mojang Studios 的注册商标。</p>
           </span>
         </div>
         <div>
           <select class="text-blue-500 font-semibold" id="languageSelector">
-            <option value="/">English</option>
             <option value="/zh-cn">简体中文</option>
+            <option value="/">English</option>
             <option value="/zh-tw">繁體中文</option>
           </select>
         </div>
