--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-tw">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Swift Craft Launcher - A Minecraft Launcher for macOS</title>
+  <title>Swift Craft Launcher - macOS 專用的 Minecraft 啟動器</title>
   <link rel="stylesheet" href="/main.css" />
   <link rel="shortcut icon"
     href="https://github.com/suhang12332/Swift-Craft-Launcher/raw/main/SwiftCraftLauncher/Assets.xcassets/AppIcon.appiconset/mac512pt2x.png"
@@ -36,13 +35,12 @@
       <h1 class="font-bold text-xl">Swift Craft Launcher</h1>
       <div class="flex gap-8 items-center text-xs h-full">
         <p class="items-center border-b-1 border-b-header-border-active h-full mt-[1px] hidden lg:flex">
-          Overview
+          概覽
         </p>
         <a href="https://github.com/suhang12332/Swift-Craft-Launcher/"
-          class="opacity-80 hover:opacity-90 after:content-['􀄯'] after:text-[10px] after:ml-1">More on
-          github</a>
+          class="opacity-80 hover:opacity-90 after:content-['􀄯'] after:text-[10px] after:ml-1">在 Github 上查看更多</a>
         <a href="https://github.com/suhang12332/Swift-Craft-Launcher/releases/latest"
-          class="py-1.25 px-3 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white hidden lg:flex">Download</a>
+          class="py-1.25 px-3 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white hidden lg:flex">下載</a>
       </div>
     </div>
   </header>
@@ -55,15 +53,15 @@
             alt class="w-40 h-40 absolute top-4 left-4 blur-2xl lg:w-64 lg:h-64" />
           <img
             src="https://github.com/suhang12332/Swift-Craft-Launcher/raw/main/SwiftCraftLauncher/Assets.xcassets/AppIcon.appiconset/mac512pt2x.png"
-            alt class="absolute top-0 left-0"/>
+            alt class="absolute top-0 left-0" />
         </div>
         <h1 class="title text-3xl font-bold mb-1 lg:text-7xl lg:mb-4">Swift Craft Launcher</h1>
         <p class="subtitle font-bold text-lg mb-8 lg:text-xl">
-          A modern Minecraft launcher for macOS
+          macOS 專用的現代 Minecraft 啟動器
         </p>
         <a href="https://github.com/suhang12332/Swift-Craft-Launcher/releases/latest"
-          class="download-button py-1.25 px-3.5 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white">Download</a>
-        <p class="opacity-56 text-sm mt-3.5">Requires macOS 14.0 or later</p>
+          class="download-button py-1.25 px-3.5 rounded-full bg-button-blue hover:bg-button-blue-hover active:bg-button-blue-active text-white">下載</a>
+        <p class="opacity-56 text-sm mt-3.5">需要 macOS 14.0 或更新版本</p>
       </div>
     </section>
   </main>
@@ -81,42 +79,41 @@
         <!-- Links -->
         <div class="gap-35 mb-20 hidden lg:flex">
           <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Project</h3>
-            <p class="opacity-56 text-sm"><a href>Overview</a></p>
+            <h3 class="opacity-88">專案</h3>
+            <p class="opacity-56 text-sm"><a href>概覽</a></p>
           </div>
           <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Support</h3>
+            <h3 class="opacity-88">支援</h3>
             <p class="opacity-56 text-sm">
-              <a href="https://imreak.github.io/">User Guide</a>
+              <a href="https://imreak.github.io/">使用者指南</a>
             </p>
             <p class="opacity-56 text-sm">
-              <a href="https://github.com/suhang12332/Swift-Craft-Launcher/issues">Report
-                Issues</a>
+              <a href="https://github.com/suhang12332/Swift-Craft-Launcher/issues">回報問題</a>
             </p>
           </div>
           <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Development</h3>
+            <h3 class="opacity-88">開發</h3>
             <p class="opacity-56 text-sm">
               <a href="https://github.com/suhang12332/Swift-Craft-Launcher/">Github</a>
             </p>
           </div>
           <div class="flex flex-col gap-2.5">
-            <h3 class="opacity-88">Community</h3>
+            <h3 class="opacity-88">社群</h3>
             <p class="opacity-56 text-sm"><a href>BiliBili</a></p>
-            <p class="opacity-56 text-sm"><a href>QQ Group</a></p>
+            <p class="opacity-56 text-sm"><a href>QQ 群</a></p>
           </div>
         </div>
         <div class="flex lg:justify-end">
           <div class="flex p-0.25 rounded-full border-1 border-button-blue text-xs text-blue-500 mb-3"
             id="themeSelector">
             <p class="px-2 py-0.75 cursor-pointer rounded-full" data-theme="light">
-              Light
+              明亮
             </p>
             <p class="px-2 py-0.75 cursor-pointer rounded-full" data-theme="dark">
-              Dark
+              深色
             </p>
             <p class="px-2 py-0.75 cursor-pointer rounded-full" data-theme="auto">
-              Auto
+              自動
             </p>
           </div>
         </div>
@@ -124,23 +121,21 @@
       <div class="flex justify-between border-t-1 border-gray-700 py-2 text-xs">
         <div class="opacity-56 flex gap-2 flex-col lg:flex-row lg:gap-8">
           <p>
-            Copyright © 2025 Swift Craft Launcher. All rights reserved.
+            版權所有 © 2025 Swift Craft Launcher。保留一切權利。
           </p>
-          <p class="hidden lg:flex">Swift Craft Launcher is an open-source project under the AGPLv3
-            license.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Minecraft is a trademark of Mojang Studios</span>
-          </p>
+          <p class="hidden lg:flex">Swift Craft Launcher 是一個遵循 AGPLv3
+            授權的開源專案。&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Minecraft 是 Mojang Studios 的商標</p>
           <span class="flex flex-col gap-2 lg:hidden">
-            <p> Swift Craft Launcher is an open-source project under the AGPLv3
-              license.</p>
+            <p> Swift Craft Launcher 是一個遵循 AGPLv3 授權的開源專案。</p>
             <hr>
-            <p> Minecraft is a trademark of Mojang Studios</p>
+            <p> Minecraft 是 Mojang Studios 的商標</p>
           </span>
         </div>
         <div>
           <select class="text-blue-500 font-semibold" id="languageSelector">
+            <option value="/zh-tw">繁體中文</option>
             <option value="/">English</option>
             <option value="/zh-cn">简体中文</option>
-            <option value="/zh-tw">繁體中文</option>
           </select>
         </div>
       </div>
