--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Swift Craft Launcher - macOS 專用的 Minecraft 啟動器</title>
-  <link rel="stylesheet" href="/main.css" />
+  <link rel="stylesheet" href="../main.css" />
   <link rel="shortcut icon"
     href="https://github.com/suhang12332/Swift-Craft-Launcher/raw/main/SwiftCraftLauncher/Assets.xcassets/AppIcon.appiconset/mac512pt2x.png"
     type="image/x-icon" />
@@ -133,15 +133,16 @@
         </div>
         <div>
           <select class="text-blue-500 font-semibold" id="languageSelector">
-            <option value="/zh-tw">繁體中文</option>
-            <option value="/">English</option>
-            <option value="/zh-cn">简体中文</option>
+            <option value="../zh-tw">繁體中文</option>
+            <option value="../">English</option>
+            <option value="../zh-cn">简体中文</option>
           </select>
         </div>
       </div>
     </div>
   </footer>
 </body>
-<script src="/script.js"></script>
+<script src="../script.js"></script>
+
 
 </html>
