--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="flex justify-between border-t-1 border-gray-700 py-2 text-xs">
-        <div class="opacity-56 flex gap-2 flex-col lg:flex-row lg:gap-8">
+        <div class="opacity-56 flex gap-2 flex-col">
           <p>
             Copyright © 2025 Swift Craft Launcher. All rights reserved.
           </p>
@@ -138,7 +138,7 @@
         </div>
         <div>
           <select class="text-blue-500 font-semibold" id="languageSelector">
-            <option value="../">English</option>
+            <option value="">English</option>
             <option value="zh-cn">简体中文</option>
             <option value="zh-tw">繁體中文</option>
           </select>
@@ -148,6 +148,5 @@
   </footer>
 </body>
 <script src="script.js"></script>
-
 
 </html>
