--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -119,7 +119,7 @@
         </div>
       </div>
       <div class="flex justify-between border-t-1 border-gray-700 py-2 text-xs">
-        <div class="opacity-56 flex gap-2 flex-col lg:flex-row lg:gap-8">
+        <div class="opacity-56 flex gap-2 flex-col">
           <p>
             版权所有 © 2025 Swift Craft Launcher。保留所有权利。
           </p>
@@ -143,6 +143,5 @@
   </footer>
 </body>
 <script src="../script.js"></script>
-
 
 </html>
