--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           Download
         </a>
       </div>
-      <img src="../Slice.png" alt="Swift Craft Launcher Interface Showcase" class="max-w-lvw sm:px-20 lg:max-w-7xl xl:px-0 relative">
+      <img src="Slice.png" alt="Swift Craft Launcher Interface Showcase" class="max-w-lvw sm:px-20 lg:max-w-7xl xl:px-0 relative">
     </section>
     <!-- Contributors List -->
     <section class="text-gray-50 flex mb-[52px] px-10 sm:px-20 md:px-25 lg:px-10 pt-27.5 justify-center">
@@ -372,5 +372,6 @@
   </footer>
 </body>
 <script src="script.js"></script>
+
 
 </html>
