--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         Swift Craft Launcher
       </h1>
       <p class="subtitle font-semibold text-lg max-w-xl lg:text-2xl lg:max-w-2xl text-gray-800">
-        Swift Craft Launcher is a native macOS Minecraft launcher built with SwiftUI, delivering a smooth and efficient gaming experience.  
-        Designed for modern macOS systems, it integrates full mod loader support, Microsoft account authentication, and intuitive game management features.
+        Swift Craft Launcher is a SwiftUI-based native macOS Minecraft launcher, offering smooth performance, full mod loader support, Microsoft account login, and intuitive game management.
       </p>
       <p class="mt-5 text-gray-800">
         Requires macOS 14.0 or later
@@ -375,3 +374,4 @@
 
 
 </html>
+
